# GoogleCloud

./: CMakeLists.txt  README.md
credentials/: future-yeti-402810-7d20820b92fd.json
data-to-bucket/: data.txt
src/: quickstart.cpp
